<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yaskawa_executor</name>
  <version>0.0.1</version>
  <description>A C++ package to send a trajectory of any length to Yaskawa via the QueueTrajPoint</description>
  <maintainer email="zane.zake@irt-jules-verne.fr">Zane Zake</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>trajectory_msgs</depend>
  <depend>motoros2_interfaces</depend>
  <depend>sensor_msgs</depend>

  <!-- for client and testing -->
  <depend>rclcpp_action</depend>
  <depend>control_msgs</depend>

  <depend>action_msgs</depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>


  
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
